added a div on top of the file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="logo">
     My exciting website!
   </div>
-
+<div>this is what I added to see the changes in the git test folder</div>
   <nav>
     <ul>
       <li>
